kubernetes/flask.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: shadowmail
  name: shadowmail-flask
  labels:
    app: shadowmail
    component: flask
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shadowmail
      component: flask
  template:
    metadata:
      labels:
        app: shadowmail
        component: flask
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '80'
    spec:
      containers:
      - name: flask
        image: 265777547582.dkr.ecr.eu-west-1.amazonaws.com/shadowmail-flask:${DOCKER_BUILD_NUMBER}
        ports:
          - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: shadowmail-flask-service
  labels:
    app: shadowmail
    component: flask
  namespace: shadowmail
spec:
  type: NodePort
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: shadowmail
    component: flask
