kubernetes/frontend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: shadowmail
  name: shadowmail-frontend
  labels:
    app: shadowmail
    component: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shadowmail
      component: frontend
  template:
    metadata:
      labels:
        app: shadowmail
        component: frontend
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '80'
    spec:
      containers:
      - name: frontend
        image: 265777547582.dkr.ecr.eu-west-1.amazonaws.com/shadowmail-frontend:${DOCKER_BUILD_NUMBER}
        ports:
          - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: shadowmail-frontend-service
  labels:
    app: shadowmail
    component: frontend
  namespace: shadowmail
spec:
  type: NodePort
  ports:
  - port: 9000
    targetPort: 9000
    protocol: TCP
    name: http
  selector:
    app: shadowmail
    component: frontend
