kubernetes/postfix.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: shadowmail
  name: shadowmail-postfix
  labels:
    app: shadowmail
    component: postfix
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shadowmail
      component: postfix
  template:
    metadata:
      labels:
        app: shadowmail
        component: postfix
    spec:
      containers:
      - name: postfix
        image: 265777547582.dkr.ecr.eu-west-1.amazonaws.com/shadowmail-postfix:${DOCKER_BUILD_NUMBER}
        ports:
        - containerPort: 25
        - containerPort: 465
        - containerPort: 587
        volumeMounts:
        - name: ssl
          mountPath: "/ssl"
          readOnly: true
        - mountPath: "/var/spool/postfix"
          name: postfix-spool
      volumes:
      - name: ssl
        secret:
          secretName: shadowmail-postfix-tls
      - name: postfix-spool
        persistentVolumeClaim:
          claimName: postfix-spool
      nodeSelector:
        ptr: shadowmail.co.uk
---
apiVersion: v1
kind: Service
metadata:
  name: shadowmail-postfix-service
  labels:
    app: shadowmail
    component: postfix
  namespace: shadowmail
spec:
  type: NodePort
  ports:
  - port: 25
    targetPort: 25
    protocol: TCP
    name: smtp
  - port: 465
    targetPort: 465
    protocol: TCP
    name: smtp-tls
  - port: 587
    targetPort: 587
    protocol: TCP
    name: smtp-starttls
  selector:
    app: shadowmail
    component: postfix
---
